--- a/question/templates/question/head.html
+++ b/question/templates/question/head.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8">
 <title></title>
-<link rel="shortcut icon" href="/static/common/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/static/common/img/favicon.ico" type="image/x-icon">
 <!--
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.min.css' %}">
@@ -12,8 +12,8 @@
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
 <link rel="stylesheet" href="https://cdn.bootcss.com/summernote/0.8.8/summernote.css">
-<link rel="stylesheet" type="text/css" href="{% static 'common/prod/z_main.min.20181019172256.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/prod/main.min.20181019172256.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'common/prod/z_main.min.20181022153429.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'common/prod/main.min.20181022153429.css' %}">
 
 
     
@@ -32,5 +32,5 @@
 <script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/i18n/defaults-zh_CN.js"></script>
 <script src="https://cdn.bootcss.com/summernote/0.8.8/summernote.min.js"></script>
 <script src="https://cdn.bootcss.com/summernote/0.8.8/lang/summernote-zh-CN.js"></script>
-<script src="{% static 'common/prod/main.min.20181019172256.js' %}"></script>
+<script src="{% static 'common/prod/main.min.20181022153429.js' %}"></script>
 </head>
