--- a/question/templates/question/t_business_mobile.html
+++ b/question/templates/question/t_business_mobile.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
 {% include 'question/head_mobile.html' %}
-
+<script src="/static/common/prod/citys.min.js"></script>
+<script src="/static/common/prod/mobile_business.min.js"></script>
 <body class="Mobile-body">
 <div id="root">
 <div class="App">
@@ -10,36 +11,58 @@
 {% include 'question/header_mobile.html' %}
 </div>
 
-<main role="main" class="App-main" data-module="setting" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","type":"{{type}}","conversation_id":"{{conversation_id}}"}'>
+<!--------------------main---------------------->
+<main role="main" class="App-main" data-module="business" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 
-<div id="settings">
+<div class="Post-content">
+<!--<img class="TitleImage" src="" alt="">-->
+<article class="Post-Main Post-NormalMain">
 
-<div class="Card">
+<header class="Post-Header">
+<h1 class="Post-Title">{{businessInfo.title}}</h1>
+<div class="ContentItem-time">
+<span>{{businessInfo.update_date|date:"Y-m-d"}}</span>
+</div>
+<div class="Post-Author">
+<div class="AuthorInfo">
+<span class="UserLink AuthorInfo-avatarWrapper">
+<a class="UserLink-link" target="_blank" href="/er/{{businessInfo.poster__id}}/">
+<img class="Avatar Avatar--round AuthorInfo-avatar" width="38" height="38" src="{{businessInfo.poster__userprofile__avatar}}" alt="{{businessInfo.poster__first_name}}">
+</a>
+</span>
+<div class="AuthorInfo-content">
+<div class="AuthorInfo-head">
+<span class="UserLink AuthorInfo-name">
+<a class="UserLink-link" target="_blank" href="/er/{{businessInfo.poster__id}}/">{{businessInfo.poster__first_name}}</a>
+</span>
+</div>
+<div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText ztext AuthorInfo-badgeText">{{businessInfo.poster__userprofile__mood}}</div></div></div>
+</div>
+</div>
+<button type="button" class="Button FollowButton Button--primary 1is-hide" data-follow-type="people"><span>关注</span></button>
+</div>
+<div><span class="Voters"><button type="button" class="Button Button--plain"><span class="Article--likenums--nouse">10</span> 次浏览</button></span>
+</div>
+</header>
+
 <div>
-<div>
-<div class="Sticky" style=""></div>
-</div>
-</div>
-<div class="Topic-bar">
-<ul role="tablist" class="Tabs Topic-tabs">
-<li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link is-active" href="/notifications">通知</a></li>
-<li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" href="/conversations">私信</a></li>
-<li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" href="/settings">设置</a></li>
-</ul>
+<div class="RichText ztext Post-RichText" style="1white-space: pre;">
+{{businessInfo.detail}}
 </div>
 </div>
 
-<div class="Card">
-<div class="List">
-<div id="appendArea" class="">
-<!--<div class="List-item SearchItem">-->
-</div>
-</div>
+<div id="business-pictures" data-pictures="{{businessInfo.pictures}}">
 </div>
 
-<!--<button class="OpenInAppButton OpenInApp is-shown">App 内打开</button>-->
-
+<div style="color:red;font-size:16px;margin-top:10px;">
+<div>区域：{{businessInfo.addr}}</div>
+<div>联系方式：{{businessInfo.contact}}</div>
+<div>联系我时，请说是在58同城看到的，谢谢！</div>
 </div>
+
+</article>
+</div>
+
 </main>
 
 </div>
