--- a/question/templates/question/t_business_post.html
+++ b/question/templates/question/t_business_post.html
@@ -1,10 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-{%load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'common/business.css' %}">
-<script src="{% static 'common/citys.js' %}"></script>
-<script src="{% static 'common/business.js' %}"></script>
+<script src="/static/common/prod/citys.min.js"></script>
+<script src="/static/common/prod/business.min.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
