--- a/question/templates/question/t_businesses.html
+++ b/question/templates/question/t_businesses.html
@@ -1,10 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-{%load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'common/business.css' %}">
-<script src="{% static 'common/citys.js' %}"></script>
-<script src="{% static 'common/business.js' %}"></script>
+<script src="/static/common/prod/citys.min.js"></script>
+<script src="/static/common/prod/business.min.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -53,36 +51,12 @@
 <div class="SearchBar">
 <div class="SearchBar-toolWrapper">
 <div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<div class="Input-after"><button id="1search_button" aria-label="搜索" type="button" class="Button SearchBar-searchIcon Button--primary"><svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></button></div>
+<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索物品的关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 </div>
 </div>
 <button id="businessSearchButton" type="button" class="Button Button--primary Button--green 1is-hide">搜索</button>
 </div>
-<!--
-<form id="search_loc" action="" method="get">
-<span class="search_input">
-<input class="but-wd" value="请输入关键字" maxlength="40" fdv="" id="keyword1" name="b_q" para="key" autocomplete="off">
-</span>
-<span class="selfcata"><input type="submit" id="searchbtn1" class="search_on" value="搜本类"></span>
-<span class="selfcata" id="search_all"><input type="button" value="搜全站"></span>
-</form>
--->
 </div>
-
-
-<!--
-<div class="SearchBar" style="clear:both;">
-<div class="SearchBar-toolWrapper">
-<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<div class="Input-after"><button id="1search_button" aria-label="搜索" type="button" class="Button SearchBar-searchIcon Button--primary"><svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></button></div>
-</div>
-</div>
-<button id="businessSearchButton" type="button" class="Button Button--primary Button--green is-hide">搜索</button>
-<button type="button" class="Button PostBusinessButton Button--primary Button--green" data-toggle="modal" data-target="#postBusiness">发布信息</button>
-</div>
--->
 
 <div class="selectResult clearfix" id="selected" style="display: none;"><div class="barct clearfix"></div></div>
 </div>
