--- a/question/templates/question/head_mobile.html
+++ b/question/templates/question/head_mobile.html
@@ -15,8 +15,8 @@
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
 <link rel="stylesheet" href="https://cdn.bootcss.com/summernote/0.8.8/summernote.css">
-<link rel="stylesheet" type="text/css" href="{% static 'common/prod/mobile_z_main.min.20181022153429.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/prod/mobile_main.min.20181022153429.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'common/prod/z_main_mobile.min.20181022161318.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'common/prod/main_mobile.min.20181022161318.css' %}">
  
 <!--   
 <script src="{%static 'common/jquery-3.2.1/jquery.min.js' %}"></script>
@@ -33,5 +33,5 @@
 <script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/i18n/defaults-zh_CN.js"></script>
 <script src="https://cdn.bootcss.com/summernote/0.8.8/summernote.min.js"></script>
 <script src="https://cdn.bootcss.com/summernote/0.8.8/lang/summernote-zh-CN.js"></script>
-<script src="{% static 'common/prod/mobile_main.min.20181022153429.js' %}"></script>
+<script src="{% static 'common/prod/main_mobile.min.20181022161318.js' %}"></script>
 </head>
