--- a/question/templates/question/t_business.html
+++ b/question/templates/question/t_business.html
@@ -46,12 +46,11 @@
 
 <div>
 <div class="RichText ztext Post-RichText" style="1white-space: pre;">
-{{businessInfo.detail}}
+<div id="business-detail">{{businessInfo.detail}}</div>
+<div id="business-pictures" data-pictures="{{businessInfo.pictures}}"></div>
 </div>
 </div>
 
-<div id="business-pictures" data-pictures="{{businessInfo.pictures}}">
-</div>
 
 <div style="color:red;font-size:16px;margin-top:10px;">
 <div>区域：{{businessInfo.addr}}</div>
