improve business feature code

--- a/question/templates/question/t_business.html
+++ b/question/templates/question/t_business.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-<script src="/static/common/prod/citys.min.js"></script>
-<script src="/static/common/prod/business.min.js"></script>
+<script src="/static/common/prod/business.min.20181030134831.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -55,7 +54,7 @@
 <div style="color:red;font-size:16px;margin-top:10px;">
 <div>区域：{{businessInfo.addr}}</div>
 <div>联系方式：{{businessInfo.contact}}</div>
-<div>联系我时，请说是在58同城看到的，谢谢！</div>
+<div>联系我时，请说是在大农令上看到的，谢谢！</div>
 </div>
 
 </article>
