--- a/question/templates/question/t_business_mobile.html
+++ b/question/templates/question/t_business_mobile.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
 {% include 'question/head_mobile.html' %}
-<script src="/static/common/prod/citys.min.js"></script>
-<script src="/static/common/prod/business_mobile.min.js"></script>
+<script src="/static/common/prod/business_mobile.min.20181030134831.js"></script>
 <body class="Mobile-body">
 <div id="root">
 <div class="App">
@@ -55,7 +54,7 @@
 <div style="color:red;font-size:16px;margin-top:10px;">
 <div>区域：{{businessInfo.addr}}</div>
 <div>联系方式：{{businessInfo.contact}}</div>
-<div>联系我时，请说是在58同城看到的，谢谢！</div>
+<div>联系我时，请说是在大农令上看到的，谢谢！</div>
 </div>
 
 </article>
