--- a/question/templates/question/t_businesses.html
+++ b/question/templates/question/t_businesses.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-<script src="/static/common/prod/citys.min.js"></script>
-<script src="/static/common/prod/business.min.js"></script>
+<script src="/static/common/prod/citys.min.20181030134831.js"></script>
+<script src="/static/common/prod/business.min.20181030134831.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
