--- a/static/common/dev_staging/main.css
+++ b/static/common/dev_staging/main.css
@@ -1176,18 +1176,18 @@ a.QuestionMainAction:hover{color:#228b22}
 }
 
 .BusinessPost-content {
-    padding: 0 5px 20px;
+    padding: 0 10px 20px;
     margin-top: 20px;
     line-height: 1.7;
     opacity: 1;
 }
 
-.QuestionAsk-section.QuestionAsk-DetailSection {
-    margin-top: 24px;
+.BusinessPost-section.BusinessPost-DetailSection {
+    margin-top: 0px;
 }
 
-.QuestionAsk-section {
-    margin-bottom: 12px;
+.BusinessPost-section {
+    margin-bottom: 10px;
 }
 
 #selection {
