--- a/question/templates/question/t_business_post.html
+++ b/question/templates/question/t_business_post.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-<script src="/static/common/prod/citys.min.20181104023406.js"></script>
-<script src="/static/common/prod/business.min.20181104023406.js"></script>
+<script src="/static/common/prod/citys.min.20181108171716.js"></script>
+<script src="/static/common/prod/business.min.20181108171716.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -22,7 +22,11 @@
     <div class="1QuestionAsk">
         <div class="BusinessPost-section BusinessPost-DetailSection">类别：
             <div class="BusinessPost-title" style="padding:0 0 0 10px;">
-                <label><input type="radio" name="type" value="sell" checked>我要出售</label>&nbsp;&nbsp;&nbsp;<label><input type="radio" name="type" value="buy">我要求购</label>
+                <select id="type" style="width:50%">
+                <option value="sell">我要出售</option>
+                <option value="buy">我要求购</option>
+                </select>
+                <input type="hidden" name="type" value="">
             </div>
         </div>
         
@@ -59,7 +63,7 @@
         <div class="BusinessPost-section">
             <div class="BusinessPost-title">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                    <textarea required="" name="title" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="信息标题"></textarea>
+                    <textarea required="" name="title" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="信息标题" maxlength=100></textarea>
                 </div>
             </div>
         </div>
@@ -68,7 +72,7 @@
         <div class="BusinessPost-section BusinessPost-DetailSection">
             <div class="BusinessPost-detail">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                    <textarea name="detail" rows="5" autocomplete="off" role="combobox" class="Input" placeholder="信息详细描述（可选）"></textarea>
+                    <textarea name="detail" rows="5" autocomplete="off" role="combobox" class="Input" placeholder="信息详细描述（必填）" maxlength=1000></textarea>
                 </div>
                 <!--<textarea id="1summernote_question" name="tmpDetail" rows="5" cols="70" 1maxlength="160"></textarea>-->
                 <!--<input type="hidden" name="detail" value="">-->
@@ -76,7 +80,7 @@
         </div>
         
         <div class="BusinessPost-section BusinessPost-DetailSection">
-            <div style="float:left;">添加图片(最多4张)：</div>
+            <div style="float:left;">添加图片(最多8张)：</div>
             <div style="padding:0 0 0 10px;">
                 <button id="business-picture-select" type="button"><svg  viewBox="0 0 32 32" width="24" height="24"><path d="M29.996 4c0.001 0.001 0.003 0.002 0.004 0.004v23.993c-0.001 0.001-0.002 0.003-0.004 0.004h-27.993c-0.001-0.001-0.003-0.002-0.004-0.004v-23.993c0.001-0.001 0.002-0.003 0.004-0.004h27.993zM30 2h-28c-1.1 0-2 0.9-2 2v24c0 1.1 0.9 2 2 2h28c1.1 0 2-0.9 2-2v-24c0-1.1-0.9-2-2-2v0z"></path><path d="M26 9c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"></path><path d="M28 26h-24v-4l7-12 8 10h2l7-6z"></path></svg><span style="font-size:12px;color:#666;">选择图片</span></button>
                 <input id="business-picture-input" type="file" accept="image/png,image/jpeg" style="display:none;">
@@ -89,7 +93,7 @@
         <div class="BusinessPost-section">
             <div class="BusinessPost-contact">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                    <textarea required="" name="contact" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="联系方式（名字，电话等）"></textarea>
+                    <textarea required="" name="contact" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="联系方式（名字，电话等）" maxlength=100></textarea>
                 </div>
             </div>
         </div>
