--- a/question/templates/question/t_business_post_mobile.html
+++ b/question/templates/question/t_business_post_mobile.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
 {% include 'question/head_mobile.html' %}
-<script src="/static/common/prod/citys.min.20181104023406.js"></script>
-<script src="/static/common/prod/business_mobile.min.20181104023406.js"></script>
+<script src="/static/common/prod/citys.min.20181108171716.js"></script>
+<script src="/static/common/prod/business_mobile.min.20181108171716.js"></script>
 <body class="Mobile-body">
 <div id="root">
 <div class="1App">
@@ -25,7 +25,11 @@
     <div class="1QuestionAsk">
         <div class="BusinessPost-section BusinessPost-DetailSection">类别：
             <div class="BusinessPost-title" style="padding:0 0 0 10px;">
-                <label><input type="radio" name="type" value="sell" checked>我要出售</label>&nbsp;&nbsp;&nbsp;<label><input type="radio" name="type" value="buy">我要求购</label>
+                <select id="type" style="width:100%;padding:3px 0 3px 0;">
+                <option value="sell">我要出售</option>
+                <option value="buy">我要求购</option>
+                </select>
+                <input type="hidden" name="type" value="">
             </div>
         </div>
         
@@ -33,19 +37,19 @@
             <div class="BusinessPost-addr" style="padding:0 0 10px 10px;">
 
                 <div id="province">
-                <select id="province_select" style="width:100%;">
+                <select id="province_select" style="width:100%;padding:3px 0 3px 0;margin-bottom:10px;">
                 <option value="000000">请选择省份（必选）</option>
                 </select>
                 </div>
 
                 <div id="city">
-                <select id="city_select" style="width:100%;">
+                <select id="city_select" style="width:100%;padding:3px 0 3px 0;margin-bottom:10px;">
                 <option value="000000">请选择城市（全部）</option>
                 </select>
                 </div>
 
                 <div id="district">
-                <select id="district_select" style="width:100%;">
+                <select id="district_select" style="width:100%;padding:3px 0 3px 0;margin-bottom:10px;">
                 <option value="000000">请选择地区（全部）</option>
                 </select>
                 </div>
@@ -62,7 +66,7 @@
         <div class="BusinessPost-section">
             <div class="BusinessPost-title">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                    <textarea required="" name="title" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="信息标题"></textarea>
+                    <textarea required="" name="title" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="信息标题" maxlength=100></textarea>
                 </div>
             </div>
         </div>
@@ -71,7 +75,7 @@
         <div class="BusinessPost-section BusinessPost-DetailSection">
             <div class="BusinessPost-detail">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                    <textarea name="detail" rows="5" autocomplete="off" role="combobox" class="Input" placeholder="信息详细描述（可选）"></textarea>
+                    <textarea name="detail" rows="5" autocomplete="off" role="combobox" class="Input" placeholder="信息详细描述（必填）" maxlength=1000></textarea>
                 </div>
                 <!--<textarea id="1summernote_question" name="tmpDetail" rows="5" cols="70" 1maxlength="160"></textarea>-->
                 <!--<input type="hidden" name="detail" value="">-->
@@ -92,7 +96,7 @@
         <div class="BusinessPost-section">
             <div class="BusinessPost-contact">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                    <textarea required="" name="contact" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="联系方式（名字，电话等）"></textarea>
+                    <textarea required="" name="contact" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="联系方式（名字，电话等；必填）" maxlength=100></textarea>
                 </div>
             </div>
         </div>
