--- a/question/templates/question/t_businesses.html
+++ b/question/templates/question/t_businesses.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-<script src="/static/common/prod/citys.min.20181104023406.js"></script>
-<script src="/static/common/prod/business.min.20181104023406.js"></script>
+<script src="/static/common/prod/citys.min.20181108171716.js"></script>
+<script src="/static/common/prod/business.min.20181108171716.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -17,7 +17,7 @@
 
 <div class="Card-header">
 <div class="Card-headerText">
-<span>请选择区域><span id='local'></span></span>
+<span>请选择区域<span id='local'></span></span>
 </div>
 <a type="button" class="Button PostBusinessButton Button--primary Button--green" href="/business/post/">免费发布信息</a>
 </div>
