--- a/question/templates/question/t_business_post_mobile.html
+++ b/question/templates/question/t_business_post_mobile.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
 {% include 'question/head_mobile.html' %}
-<script src="/static/common/prod/citys.min.20181108171716.js"></script>
-<script src="/static/common/prod/business_mobile.min.20181108171716.js"></script>
+<script src="/static/common/prod/citys.min.20181109144051.js"></script>
+<script src="/static/common/prod/business_mobile.min.20181109144051.js"></script>
 <body class="Mobile-body">
 <div id="root">
 <div class="1App">
@@ -15,13 +15,13 @@
 <main role="main" class="App-main" data-module="business-post" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 <div class="Layout av-cardBackground">
 <div class="Layout-main av-card">
-<form method="post" action="/business/post/">
+<form method="post" action="">
 {% csrf_token %}
 <div class="BusinessPostHeader">
 <h3 class="BusinessPostHeader-title">填写信息</h3>
 </div>
 
-<div class="BusinessPost-content">
+<div class="BusinessPost-content" data-revise="{{revise}}" data-business='{"id":"{{businessInfo.id}}","title":"{{businessInfo.title}}","detail":"{{businessInfo.detail}}","type":"{{businessInfo.type}}","addr":"{{businessInfo.addr}}","addr_value":"{{businessInfo.addr_value}}","contact":"{{businessInfo.contact}}","pictures":"{{businessInfo.pictures}}"}'>
     <div class="1QuestionAsk">
         <div class="BusinessPost-section BusinessPost-DetailSection">类别：
             <div class="BusinessPost-title" style="padding:0 0 0 10px;">
@@ -102,7 +102,7 @@
         </div>
            
         <div style="display:flex;justify-content:center;">
-            <button class="BusinessPost Button Button--primary Button--green" disabled type="button">发布信息</button>
+            <button class="BusinessPostRevise Button Button--primary Button--green" disabled type="button">发布信息</button>
         </div>
     </div>
 </div>
