--- a/question/templates/question/footer.html
+++ b/question/templates/question/footer.html
@@ -1,4 +1,6 @@
 <footer class="Footer">
+<a class="Footer-item" target="_blank" href="/sitemap/">网站内容地图</a>
+<br>
 <a class="Footer-item" target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备16003534号</a>
 <br>
 <a class="Footer-item" target="_blank" href="http://www.12377.cn">网上有害信息举报专区</a>
