improve code for seo

--- a/question/templates/question/t_business_post.html
+++ b/question/templates/question/t_business_post.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
 {% include 'question/head.html' %}
-<script src="/static/common/prod/citys.min.20181113141103.js"></script>
-<script src="/static/common/prod/business.min.20181113141103.js"></script>
+<script src="/static/common/prod/citys.min.20181126160322.js"></script>
+<script src="/static/common/prod/business.min.20181126160322.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -25,6 +25,7 @@
                 <select id="type" style="width:50%">
                 <option value="sell">我要出售</option>
                 <option value="buy">我要求购</option>
+                <option value="lease">租赁</option>
                 </select>
                 <input type="hidden" name="type" value="">
             </div>
