--- a/question/templates/question/t_business_post_mobile.html
+++ b/question/templates/question/t_business_post_mobile.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
 {% include 'question/head_mobile.html' %}
-<script src="/static/common/prod/citys.min.20181113141103.js"></script>
-<script src="/static/common/prod/business_mobile.min.20181113141103.js"></script>
+<script src="/static/common/prod/citys.min.20181126160322.js"></script>
+<script src="/static/common/prod/business_mobile.min.20181126160322.js"></script>
 <body class="Mobile-body">
 <div id="root">
 <div class="1App">
@@ -28,6 +28,7 @@
                 <select id="type" style="width:100%;padding:3px 0 3px 0;">
                 <option value="sell">我要出售</option>
                 <option value="buy">我要求购</option>
+                <option value="lease">租赁</option>
                 </select>
                 <input type="hidden" name="type" value="">
             </div>
