--- a/question/templates/question/t_businesses_mobile.html
+++ b/question/templates/question/t_businesses_mobile.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
 {% include 'question/head_mobile.html' %}
-<script src="/static/common/prod/citys.min.20181113141103.js"></script>
-<script src="/static/common/prod/business_mobile.min.20181113141103.js"></script>
+<script src="/static/common/prod/citys.min.20181126160322.js"></script>
+<script src="/static/common/prod/business_mobile.min.20181126160322.js"></script>
 <body class="Entry-body" style="background-color:#fff">
 <body class="Mobile-body">
 <div id="root">
@@ -79,6 +79,7 @@
     <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link is-active" data-business-type="all" href="javascript:;">全部</a ></li>
     <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" data-business-type="sell" href="javascript:;">出售</a></li>
     <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" data-business-type="buy" href="javascript:;">求购</a></li>
+    <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" data-business-type="lease" href="javascript:;">租赁</a></li>
 </ul>
 </div>
 </div>
