--- a/question/templates/question/t_article.html
+++ b/question/templates/question/t_article.html
@@ -11,31 +11,32 @@
 <article class="Post-Main Post-NormalMain">
 
 <header class="Post-Header">
-<h1 class="Post-Title"></h1>
+<h1 class="Post-Title">{{article.title}}</h1>
 <div class="Post-Author">
 <div class="AuthorInfo">
 <span class="UserLink AuthorInfo-avatarWrapper">
-<a class="UserLink-link PeoplePopover" target="_blank" href="" "data-author-id="{{article.author__id}}" data-author-name="{{article.author__first_name}}" data-author-avatar="{{article.author__userprofile__avatar}}" data-author-mood="{{article.author__userprofile__mood}}" data-author-sexual="{{article.author__userprofile__sexual}}" data-author-answer-nums="{{article.author__userprofile__answer_nums}}" data-author-article-nums="{{article.author__userprofile__article_nums}}" data-author-follower-nums="{{article.author__userprofile__follower_nums}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
-<img class="Avatar Avatar--round AuthorInfo-avatar" width="38" height="38" src="" alt="">
+<a class="UserLink-link PeoplePopover" target="_blank" href="/er/{{article.author__id}}" "data-author-id="{{article.author__id}}" data-author-name="{{article.author__first_name}}" data-author-avatar="{{article.author__userprofile__avatar}}" data-author-mood="{{article.author__userprofile__mood}}" data-author-sexual="{{article.author__userprofile__sexual}}" data-author-answer-nums="{{article.author__userprofile__answer_nums}}" data-author-article-nums="{{article.author__userprofile__article_nums}}" data-author-follower-nums="{{article.author__userprofile__follower_nums}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
+<img class="Avatar Avatar--round AuthorInfo-avatar" width="38" height="38" src="{{article.author__userprofile__avatar}}" alt="{{article.author__first_name}}">
 </a>
 </span>
 <div class="AuthorInfo-content">
 <div class="AuthorInfo-head">
 <span class="UserLink AuthorInfo-name">
-<a class="UserLink-link 1PeoplePopover" target="_blank" href="" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true"></a>
+<a class="UserLink-link 1PeoplePopover" target="_blank" href="/er/{{article.author__id}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">{{article.author__first_name}}</a>
 </span>
 </div>
-<div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText ztext AuthorInfo-badgeText"></div></div></div>
+<div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText ztext AuthorInfo-badgeText">{{article.author__userprofile__mood}}</div></div></div>
 </div>
 </div>
 <button type="button" class="Button FollowButton Button--primary is-hide" data-follow-type="people"><span></span></button>
 </div>
-<div><span class="Voters"><button type="button" class="Button Button--plain"><span class="Article--likenums--nouse"></span> 人赞了该文章</button></span>
+<div><span class="Voters"><button type="button" class="Button Button--plain"><span class="Article--likenums--nouse">{{article.like_nums}}</span> 人赞了该文章</button></span>
 </div>
 </header>
 
 <div>
 <div class="RichText ztext Post-RichText">
+{{article.content}}
 </div>
 </div>
 
@@ -59,7 +60,7 @@
 
 
 <div>
-<div class="Sticky RichContent-actions is-bottom" style=""><div class="ContentItem-actions"><button type="button" class="Button-like-nouse Button Button--plain" data-like-type="article" data-like-id=""><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like" style="height:16px;width:13px" width="13" height="16" aria-hidden="true"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg><span class="Article--likenums--nouse"></span></button><button type="button" class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel"><span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span><span class="Comment--nums--nouse"></span> 条评论</button><div class="Popover ShareMenu ContentItem-action"><div class="" id="Popover-83863-14084-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-83863-14084-content"><button type="button" class="Button Button--plain Button--withIcon Button--withLabel"><span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path></svg></span>分享</button></div></div></div></div>
+<div class="Sticky RichContent-actions is-bottom" style=""><div class="ContentItem-actions"><button type="button" class="Button-like-nouse Button Button--plain" data-like-type="article" data-like-id="{{article.id}}"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like" style="height:16px;width:13px" width="13" height="16" aria-hidden="true"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg><span class="Article--likenums--nouse">{{article.like_nums}}</span></button><button type="button" class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel"><span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span><span class="Comment--nums--nouse">{{article.comment_nums}}</span> 条评论</button><div class="Popover ShareMenu ContentItem-action"><div class="" id="Popover-83863-14084-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-83863-14084-content"><button type="button" class="Button Button--plain Button--withIcon Button--withLabel"><span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path></svg></span>分享</button></div></div></div></div>
 </div>
 <div class="RichContent-actions-anchor"></div>
 <div class="Recommendations-Main" style="width: auto">
@@ -76,7 +77,7 @@
 <div class="Comments-container">
 <div class="Comments Comments--withEditor Comments-withPagination">
 <div class="Topbar CommentTopbar">
-<div class="Topbar-title"><h2 class="CommentTopbar-title"><span class="Comment--nums--nouse"></span> 条评论</span></h2></div>
+<div class="Topbar-title"><h2 class="CommentTopbar-title"><span class="Comment--nums--nouse">{{article.comment_nums}}</span> 条评论</span></h2></div>
 <div class="Topbar-options">
 <button type="button" class="Button Button--plain Button--withIcon Button--withLabel">
 <span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Switch Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M13.004 7V4.232c0-.405.35-.733.781-.733.183 0 .36.06.501.17l6.437 5.033c.331.26.376.722.1 1.033a.803.803 0 0 1-.601.264H2.75a.75.75 0 0 1-.75-.75V7.75A.75.75 0 0 1 2.75 7h10.254zm-1.997 9.999v2.768c0 .405-.35.733-.782.733a.814.814 0 0 1-.5-.17l-6.437-5.034a.702.702 0 0 1-.1-1.032.803.803 0 0 1 .6-.264H21.25a.75.75 0 0 1 .75.75v1.499a.75.75 0 0 1-.75.75H11.007z" fill-rule="evenodd"></path></svg>
