--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -33,7 +33,7 @@
         </div>
         </div>
         
-        <h1 class="QuestionHeader-title"></h1>
+        <h1 class="QuestionHeader-title"><a href="/question/{{question.0}}">{{question.1}}</a></h1>
         <div class="QuestionHeader-detail RichContent RichContent--unescapable is-collapsed" >
             <div class="QuestionHeader-detail-expand">
             <div class=" RichContent-inner" style="max-height:200px;">
@@ -49,7 +49,7 @@
         <div class="QuestionHeader-side">
         <div class="QuestionHeader-follow-status">
         <div class="QuestionFollowStatus">        
-        <div class="NumberBoard QuestionFollowStatus-counts NumberBoard--divider"><button type="button" class="Button NumberBoard-item Button--plain"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName" >关注者</div><strong class="NumberBoard-value NumberBoard-itemValue" data-update-value-type="question-followed"></strong></div></button><div class="NumberBoard-item"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName">浏览人数</div><strong class="NumberBoard-value NumberBoard-itemValue"></strong></div></div></div>      
+        <div class="NumberBoard QuestionFollowStatus-counts NumberBoard--divider"><button type="button" class="Button NumberBoard-item Button--plain"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName" >关注者</div><strong class="NumberBoard-value NumberBoard-itemValue" data-update-value-type="question-followed">{{question.4}}</strong></div></button><div class="NumberBoard-item"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName">浏览人数</div><strong class="NumberBoard-value NumberBoard-itemValue">{{question.5}}</strong></div></div></div>      
         </div>
         </div>
         </div>
@@ -144,7 +144,7 @@
         <div id="listArea">
         {% if push_answer %}
         <div class="Card">
-        <a class="QuestionMainAction" href="/question/{{question.0}}">查看全部 {{question.3}} 个回答</a>
+        <a class="QuestionMainAction" href="/question/{{question.0}}/">查看全部 {{question.3}} 个回答</a>
         </div>
 
         <div class="Card AnswerCard">
@@ -257,7 +257,7 @@
         {% endif %}
                 
         <div class="Card">
-        <a class="QuestionMainAction" href="/question/{{question.0}}">查看全部 {{question.3}} 个回答</a>
+        <a class="QuestionMainAction" href="/question/{{question.0}}/">查看全部 {{question.3}} 个回答</a>
         </div>
         {% else %}
         <div class="Card AllAnswers">
@@ -267,7 +267,45 @@
         <div class="List-headerOptions">
         </div>
         </div>
-        <div id="appendArea"></div>
+        <div id="appendArea">
+        
+        {% if all_answers_sets_10 %}
+        {% for answer in all_answers_sets_10 %}
+            <div class="List-item ScrollIntoMark">
+            <div class="ContentItem AnswerItem" data-content-id="{{answer.be_answers__id}}" data-content-type="answer" data-comment-nums="{{answer.be_answers__comment_nums}}">
+            <div class="ContentItem-meta">
+            <div class="AnswerItem-meta AnswerItem-meta--related">
+            <div class="AuthorInfo">
+            <span class="UserLink AuthorInfo-avatarWrapper">
+            <a class="UserLink-link PeoplePopover" href="/er/{{answer.be_answers__author__id}}" data-author-id="{{answer.be_answers__author__id}}" data-author-name="{{answer.be_answers__author__first_name}}" data-author-avatar="{{answer.be_answers__author__userprofile__avatar}}" data-author-mood="{{answer.be_answers__author__userprofile__mood}}" data-author-sexual="{{answer.be_answers__author__userprofile__sexual}}" data-author-answer-nums="{{answer.be_answers__author__userprofile__answer_nums}}" data-author-article-nums="{{answer.be_answers__author__userprofile__article_nums}}" data-author-follower-nums="{{answer.be_answers__author__userprofile__follower_nums}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
+            <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="{{answer.be_answers__author__userprofile__avatar}}" alt="{{answer.be_answers__author__first_name}}"></a>
+            </span>
+            <div class="AuthorInfo-content"><div class="AuthorInfo-head"><span class="UserLink AuthorInfo-name"><a class="UserLink-link" href="/er/{{answer.be_answers__author__id}}">{{answer.be_answers__author__first_name}}</a></span></div><div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText AuthorInfo-badgeText">{{answer.be_answers__author__userprofile__mood|safe}}</div></div></div>
+            </div>
+            </div>
+            </div>
+            </div>
+            <div class="ContentItem-time"><span>{{answer.be_answers__pub_date|date:"Y-m-d H:i:s"}}</span></div>
+            <div class="RichContent RichContent--unescapable">
+            <div class="RichContent-expand">
+            <div class="RichContent-inner" style="max-height:400px"><span class="RichText CopyrightRichText-richText">{{answer.be_answers__content|safe}}</span></div>
+            <button class="Button ContentItem-more ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+            </div>
+            <div class="ContentItem-actions">
+            <span>
+            <button class="Button-like-nouse Button Button--plain" type="button" data-like-type="answer" data-like-id="{{answer.be_answers__id}}"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>{{answer.be_answers__like_nums}}</button>
+            </span>
+            <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button" data-answer-id="{{answer.be_answers__id}}"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>{{answer.be_answers__comment_nums}} 条评论</button>
+            <div class="Popover ShareMenu ContentItem-action"><div class="" aria-haspopup="true" aria-expanded="false"><img class="ShareMenu-fakeQRCode" src="" alt="微信二维码"><button class="Button Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path></svg></span>分享</button></div></div>
+            <button class="Button ContentItem-less ContentItem-rightButton Button--plain is-hide" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+            </div>
+            </div>
+            </div>
+            </div>
+        {% endfor %}
+        {% endif %}
+        
+        </div>
         </div>
         </div>
         {% endif %}
@@ -309,15 +347,8 @@
             <div class="Card-section SimilarQuestions-list">
                 <!--<div class="SimilarQuestions-item"><meta itemprop="name" content=""><meta itemprop="url" content=""><meta itemprop="answerCount" content=""><meta itemprop="followerCount" content=""><a class="Button Button--plain" target="_blank" type="button" href="">title</a>  个回答</div>-->
             </div>
-        </div>
-
-        
-            <footer class="Footer">
-            </span><a class="Footer-item" target="_blank" href="http://www.12377.cn">网上有害信息举报专区</a><br><span class="Footer-item">违法和不良信息举报：010-82716601</span><br><!--<a class="Footer-item" target="_blank" href="/jubao">儿童色情信息举报专区</a><br>--><a class="Footer-item" target="_blank" href="/">联系我们</a><span> © 2018 大农令</span>
-            </footer>
-
-        
-        
+        </div>       
+        {% include 'question/footer.html' %}      
         </div>
     </div>
 </div>    
