--- a/question/templates/question/t_index_mobile.html
+++ b/question/templates/question/t_index_mobile.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
+<head>
+<meta charset="utf-8">
+<meta name="baidu-site-verification" content="cgUsXbHgaN" />
+<title></title>
 {% include 'question/head_mobile.html' %}
+</head>
 <body class="Mobile-body">
 <div id="root">
 <div class="App">
