--- a/question/templates/question/t_article.html
+++ b/question/templates/question/t_article.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=11">
+<meta charset="utf-8">
+<title>{{article.title}} - {{SITE}}</title>
 {% include 'question/head.html' %}
+</head>
 <body class="">
 {% include 'question/header.html' %}
 <div class="LoadingBar"></div>
