--- a/question/templates/question/t_business.html
+++ b/question/templates/question/t_business.html
@@ -1,7 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=11">
+<meta charset="utf-8">
+<title>{{businessInfo.title}} - {{SITE}}</title>
 {% include 'question/head.html' %}
 <script src="/static/common/prod/business.min.20181126160322.js"></script>
+</head>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
