--- a/question/templates/question/t_business_mobile.html
+++ b/question/templates/question/t_business_mobile.html
@@ -1,7 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
+<head>
+<meta charset="utf-8">
+<title>{{businessInfo.title}} - {{SITE}}</title>
 {% include 'question/head_mobile.html' %}
 <script src="/static/common/prod/business_mobile.min.20181126160322.js"></script>
+</head>
 <body class="Mobile-body">
 <div id="root">
 <div class="App">
