--- a/question/templates/question/t_business_post.html
+++ b/question/templates/question/t_business_post.html
@@ -1,8 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=11">
+<meta charset="utf-8">
+<title></title>
 {% include 'question/head.html' %}
 <script src="/static/common/prod/citys.min.20181126160322.js"></script>
 <script src="/static/common/prod/business.min.20181126160322.js"></script>
+</head>
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
