--- a/question/templates/question/t_business_post_mobile.html
+++ b/question/templates/question/t_business_post_mobile.html
@@ -1,8 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
+<head>
+<meta charset="utf-8">
+<title></title>
 {% include 'question/head_mobile.html' %}
 <script src="/static/common/prod/citys.min.20181126160322.js"></script>
 <script src="/static/common/prod/business_mobile.min.20181126160322.js"></script>
+</head>
 <body class="Mobile-body">
 <div id="root">
 <div class="1App">
