--- a/question/templates/question/t_sitemap.html
+++ b/question/templates/question/t_sitemap.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=11">
+<meta charset="utf-8">
+<title></title>
 {% include 'question/head.html' %}
+</head>
 <body class="Entry-body">
 {% include 'question/header.html' %}
 
