sitemap use cache

--- a/question/templates/question/t_sitemap.html
+++ b/question/templates/question/t_sitemap.html
@@ -17,8 +17,8 @@
 <div class="ContentLayout">
 <div class="ContentLayout-mainColumn">
 <div class="Card">
-{% include 'question/sitemap_latest_content.html' %}
-{% include 'question/sitemap_content.html' %}
+{{sitemap_latest_content|safe}}
+{{sitemap_content|safe}}
 </div>
 </div>
 </div>
