--- a/question/templates/question/footer.html
+++ b/question/templates/question/footer.html
@@ -1,5 +1,5 @@
 <footer class="Footer">
-<a class="Footer-item" target="_blank" href="/sitemap/">网站内容地图</a>
+<a class="Footer-item" target="_blank" href="http://www.danongling.com/sitemap/">网站内容地图</a>
 <br>
 <a class="Footer-item" target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备16003534号</a>
 <br>
@@ -9,4 +9,7 @@
 <br>
 <a class="Footer-item" target="_blank" href="/">联系我们</a>
 <span> © 2018 大农令</span>
+<br>
+<span>友情链接:&nbsp;</span>
+<a class="Footer-item" target="_blank" href="http://it.danongling.com/">IT技术</a>
 </footer>
